--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -1,56 +1,73 @@
 <!-- INCLUDE _result_message -->
 
-<br />
-<form action="overview.php?mode=manage" method="POST">
-  <input type="hidden" name="planet_id" value="{PLANET_ID}">
+<script type="text/javascript" src="js/planet_manage.min.js?{C_var_db_update}"></script>
 
-  <table width=519>
+<br />
+
+  <table width=519 style="max-width: 33em">
     <tr>
-      <td style="white-space: nowrap;" class="c" colspan=4>
-        <div class="fl">{PLANET_TYPE_TEXT} "{PLANET_NAME}" <a href="galaxy.php?mode=0&galaxy={PLANET_GALAXY}&system={PLANET_SYSTEM}" class="link">[{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}]</a></div>
-        <button class="fr" onclick="sn_redirect('overview.php');return false;"><span class="ok">{L_ov_return}</span></button>
-      </td>
+      <th class="c_c" nowrap>
+        <div style="display: flex; align-items: center; justify-content: space-between;">
+          <div>
+            <a href="galaxy.php?mode=0&galaxy={PLANET_GALAXY}&system={PLANET_SYSTEM}" class="link">[{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}]</a>
+            {PLANET_TYPE_TEXT}
+            "{PLANET_NAME}"
+          </div>
+          <button onclick="sn_redirect('overview.php');return false;"><span class="ok">{L_ov_return}</span></button>
+        </div>
+      </th>
     </tr>
     <tr>
-      <th>{L_ov_new_name}</th>
-      <th><input type="text" name="new_name" size=25 maxlength=20 value="{PLANET_NAME}"></th>
-      <th><input type="submit" name="rename" value="{L_ov_rename}"></th>
+      <th>
+        <form action="overview.php?mode=manage" method="POST" style="display: flex; justify-content: space-around; align-content: space-around; align-items: center;">
+          <input type="hidden" name="planet_id" value="{PLANET_ID}">
+          <div style="min-width: 11em;">{L_ov_new_name}</div>
+          <input type="text" name="new_name" size=25 maxlength=20 value="{PLANET_NAME}">
+
+          <input type="submit" name="rename" value="{L_ov_rename}">
+        </form>
+      </th>
     </tr>
     <!-- IF PLANET_TYPE == 1 -->
     <tr>
       <th>
-        {L_sys_planet_density_core} <div class="icons icon-info link" style="display: inline-block; vertical-align: middle;" onclick="document.location='infos.php?gid={D_UNIT_PLANET_DENSITY}'"></div>
-      </th>
-      <th>
-        {L_ov_core_type_current}: "{PLANET_CORE_TEXT}"<br/>
-        <label for="density_type">{L_ov_core_change_to}</label>
-        <select name="density_type" id="density_type">
-          <!-- BEGIN densities -->
-          <option value="{densities.ID}" rest="{densities.REST}" html="{densities.COST_TEXT}" html_class="{densities.COST_TEXT_CLASS}"<!-- IF PLANET_DENSITY_INDEX == densities.ID --> selected current="1"<!-- ENDIF -->>{densities.TEXT} - {densities.COST_TEXT}</option>
-          <!-- END densities -->
-        </select>
-      </th>
-      <th>
-        <button type="submit" id="transmute_button" name="transmute" value="transmute" disabled="disabled">
-          {L_sys_change}<br />
-          {L_sys_for} <span id="transmutation_cost" class="zero">0</span> {L_sys_dark_matter_sh}
-        </button>
-
-        <script type="text/javascript">
-          jQuery("#density_type").change(function(){
-            selected = jQuery("#density_type option:selected");
-            $("#transmute_button").button({disabled: parseInt(selected.attr("rest")) <= 0 || selected.attr("current") == '1'});
-            $("#transmutation_cost").html(selected.attr("html")).removeClass().addClass(selected.attr("html_class"));
-          });
-        </script>
+        <form action="overview.php?mode=manage" method="POST">
+          <input type="hidden" name="planet_id" value="{PLANET_ID}">
+          <div style="display: flex; justify-content: space-around; align-content: space-around; align-items: center;">
+            <div>
+              {L_sys_planet_density_core}
+              <div class="icons icon-info link" style="display: inline-block; vertical-align: middle;" onclick="document.location='infos.php?gid={D_UNIT_PLANET_DENSITY}'"></div>
+            </div>
+            <div style="display: flex; justify-content: space-around; align-content: space-around; flex-wrap: wrap; max-width: 22em; ">
+              <div>{L_ov_core_type_current}: "{PLANET_CORE_TEXT}"</div>
+              <div>
+                <label for="density_type">{L_ov_core_change_to}</label>
+                <select name="density_type" id="density_type">
+                  <!-- BEGIN densities -->
+                  <!-- IF PLANET_DENSITY_INDEX == densities.ID -->
+                  <!-- DEFINE $DENSITY_SELECTED = 'selected current="1"' -->
+                  <!-- ELSE -->
+                  <!-- DEFINE $DENSITY_SELECTED = '' -->
+                  <!-- ENDIF -->
+                  <option value="{densities.ID}" rest="{densities.REST}" html="{densities.COST_TEXT}" html_class="{densities.COST_TEXT_CLASS}" {$DENSITY_SELECTED}>
+                    {densities.TEXT} - {densities.COST_TEXT} {L_sys_dark_matter_sh}
+                  </option>
+                  <!-- END densities -->
+                </select>
+              </div>
+            </div>
+            <button type="submit" id="transmute_button" name="transmute" value="transmute" disabled="disabled">
+              {L_sys_change}<br />
+              {L_sys_for} <span id="transmutation_cost" class="zero">0</span> {L_sys_dark_matter_sh}
+            </button>
+          </div>
+        </form>
       </th>
     </tr>
     <!-- ENDIF -->
-</form>
     <tr>
-      <th>{L_buildings_on_planet}</th>
-      <td colspan="2" class="c_c" style="position: relative; padding: 0px; height: 100%;">
-        <div style="position: relative; width: 100%; height: 100%; border: 1px solid rgb(153, 153, 255); ">
+      <td class="c_c" style="position: relative; padding: 0; height: 100%;">
+        <div style="position: relative; width: 100%; font-size: 1.5em; height: 1.2em; border: 1px solid rgb(153, 153, 255); ">
           <!-- IF PLANET_FILL >= 100 -->
           <!-- DEFINE $BAR_COLOR = '#C00000' -->
           <!-- ELSEIF PLANET_FILL >= 80 -->
@@ -58,51 +75,51 @@
           <!-- ELSE -->
           <!-- DEFINE $BAR_COLOR = '#00C000' -->
           <!-- ENDIF -->
-          <div style="position: absolute; top: 0px; left: 0px; width: {PLANET_FILL_BAR}%; background-color: {$BAR_COLOR}; height:100%;">&nbsp;</div>
-          <div style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; vertical-align: middle;">{planet_field_current}/{planet_field_max} ({PLANET_FILL}%)</div>
+          <div style="position: absolute; top: 0; left: 0; width: {PLANET_FILL_BAR}%; background-color: {$BAR_COLOR}; height:100%;">&nbsp;</div>
+          <div style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; vertical-align: middle;">{L_buildings_on_planet} {planet_field_current}/{planet_field_max} ({PLANET_FILL}%)</div>
           &nbsp;
         </div>
         <!-- INCLUDE planet_sector_buy -->
       </td>
     </tr>
 
-<form action="overview.php?mode=manage" method="POST">
-  <input type="hidden" name="planet_id" value="{PLANET_ID}">
     <tr>
       <th style="white-space: nowrap;" class="c_l" colspan=4>{L_sys_governor}</th>
     </tr>
     <tr>
-      <th class="c">
-        <!-- DEFINE $PLANET_ID = '{PLANET_ID}' -->
-        <!-- INCLUDE planet_governor -->
-      </th>
-      <th class="c" colspan=3>
-        <table class="border_image_small">
+      <td class="c_c">
+        <table class="markup" width="100%">
           <tr>
-            <!-- BEGIN governors -->
-              <th valign="top">
-                {governors.NAME}<br />
-                <a href="infos.php?gid={governors.ID}"><img src="{I_[governors.ID]}" align="top" style="font-size: 1em; width: 11em; height: auto;" /></a><br />
+            <td>
+              <!-- DEFINE $PLANET_ID = '{PLANET_ID}' -->
+              <!-- INCLUDE planet_governor -->
+            </td>
+            <td>
+              <!-- BEGIN governors -->
+              <div class="planet-manage-governor-hire-container">
+                <div class="planet-manage-governor-hire-image-container">
+                  <img src="{I_[governors.ID]}" align="top" class="w100" />
+                  <span class="w100 posLB a75">{governors.NAME}</span>
+                </div>
+                <br />
+                <a href="infos.php?gid={governors.ID}"></a><br />
                 <!-- IF governors.MAX && governors.LEVEL >= governors.MAX -->
-                  <span class="negative">{L_sys_maximum_level}</span>
+                <span class="negative">{L_sys_maximum_level}</span>
                 <!-- ELSEIF governors.COST <= DARK_MATTER -->
-                  <!-- IF ! PLANET_GOVERNOR_ID || governors.ID == PLANET_GOVERNOR_ID -->
-                    <a href="overview.php?mode=manage&hire={governors.ID}" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a>
-                  <!-- ELSE -->
-                    <a onclick="if(confirm('{L_ov_mrc_confirm_1} {PLANET_GOVERNOR_NAME} {L_ov_mrc_confirm_2} {PLANET_GOVERNOR_LEVEL} {L_ov_mrc_confirm_3} {governors.NAME} {L_ov_mrc_confirm_4}'))window.location='overview.php?mode=manage&hire={governors.ID}';return false;" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a> <!-- href="overview.php?mode=manage&hire={governors.ID}" -->
-                  <!-- ENDIF -->
+                <!-- IF ! PLANET_GOVERNOR_ID || governors.ID == PLANET_GOVERNOR_ID -->
+                <a href="overview.php?mode=manage&hire={governors.ID}" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a>
                 <!-- ELSE -->
-                  <span class="negative">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</span>
+                <a onclick="if(confirm('{L_ov_mrc_confirm_1} {PLANET_GOVERNOR_NAME} {L_ov_mrc_confirm_2} {PLANET_GOVERNOR_LEVEL} {L_ov_mrc_confirm_3} {governors.NAME} {L_ov_mrc_confirm_4}'))window.location='overview.php?mode=manage&hire={governors.ID}';return false;" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a>
                 <!-- ENDIF -->
-              </th>
-              <!-- IF (governors.S_ROW_COUNT + 1) mod 3 == 0 -->
-                </tr><tr>
-              <!-- ENDIF -->
-
-            <!-- END governors -->
+                <!-- ELSE -->
+                <span class="negative">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</span>
+                <!-- ENDIF -->
+              </div>
+              <!-- END governors -->
+            </td>
           </tr>
         </table>
-      </th>
+      </td>
     </tr>
 
 
@@ -114,35 +131,80 @@
       <!-- IF ! IS_CAPITAL -->
       <tr>
         <th colspan="3">
-          <button type="submit" name="capital" value="capital"<!-- IF ! CAN_CAPITAL --> disabled="disabled" <!-- ENDIF --> onclick="return confirm('{L_ov_capital} {PLANET_NAME_JS}?');">
+          <!-- IF CAN_CAPITAL -->
+          <!-- ELSE -->
+           <!-- DEFINE $CAPITAL_DISABLED = 'disabled="disabled"' -->
+          <!-- ENDIF -->
+
+          <a id="planet_make_capital"
+             message="{L_ov_capital} {PLANET_NAME_JS}?"
+             href="overview.php?mode=manage&action=make_capital&planet_id={PLANET_ID}"
+             class="button_pseudo" {$CAPITAL_DISABLED}
+          >
             {L_ov_capital}<br />
             {L_sys_for} {CAPITAL_COST_TEXT} {L_sys_dark_matter_sh}
-          </button>
+          </a>
         </th>
       </tr>
       <!-- ENDIF -->
+
+    <tr>
+      <td class="c_l subheader" colspan="3">
+        {L_ov_teleport}
+      </td>
+    </tr>
       <tr>
-        <th>{L_ov_teleport}</th>
         <!-- IF CAN_TELEPORT -->
-          <th nowrap>{L_ov_teleport_new_coordinates}&nbsp;<input type="text" name="new_galaxy" maxlength=3 value="{PLANET_GALAXY}" class="coordinate">:<input type="text" name="new_system" maxlength=3 value="{PLANET_SYSTEM}" class="coordinate">:<input type="text" name="new_planet" maxlength=3 value="{PLANET_PLANET}" class="coordinate"></th>
-          <!--<th><input type="submit" name="teleport" value="{L_ov_teleport}&#10;test"><br />{L_sys_for} {C_planet_teleport_cost} {L_sys_dark_matter_sh}</th>-->
-          <th>
-            <button type="submit" name="teleport" value="teleport">
-              {L_ov_teleport}<br />
-              {L_sys_for} {TELEPORT_COST_TEXT} {L_sys_dark_matter_sh}
-            </button>
+          <th nowrap colspan="3">
+            <form action="overview.php?mode=manage&action=planet_teleport" method="POST" id="planet_teleport_form">
+              <input type="hidden" name="planet_id" value="{PLANET_ID}">
+              <div style="display: flex; justify-content: space-around; align-content: space-around;">
+                <div>
+                  {L_ov_teleport_new_coordinates}<br/>
+                  <input type="text" name="new_galaxy" maxlength=3 value="{PLANET_GALAXY}" class="coordinate"> :
+                  <input type="text" name="new_system" maxlength=3 value="{PLANET_SYSTEM}" class="coordinate"> :
+                  <input type="text" name="new_planet" maxlength=3 value="{PLANET_PLANET}" class="coordinate">
+                </div>
+
+                <button type="submit" name="teleport" value="teleport">
+                  {L_ov_teleport}<br />
+                  {L_sys_for} {TELEPORT_COST_TEXT} {L_sys_dark_matter_sh}
+                </button>
+              </div>
+            </form>
           </th>
         <!-- ELSE -->
-          <th colspan="2" class="error">{CAN_NOT_TELEPORT_MSG}</th>
+          <th colspan="3" class="error">
+            {CAN_NOT_TELEPORT_MSG}
+          </th>
         <!-- ENDIF -->
       </tr>
     <!-- ENDIF -->
+
     <tr>
-      <th>{L_colony_abandon}</th>
-      <th>{L_ov_password}<br /><input type="password" name="abandon_confirm" maxlength="32" value="" /></th>
-      <th><input type="submit" name="abandon" value="{L_colony_abandon}" /></th>
+      <td class="c_l subheader" colspan="3">
+        {L_colony_abandon}
+      </td>
+    </tr>
+    <tr>
+      <!--<th>{L_colony_abandon}</th>-->
+      <th colspan="3">
+        <form action="overview.php?mode=manage&action=planet_abandon" method="POST" id="planet_abandon_form">
+          <input type="hidden" name="planet_id" value="{PLANET_ID}">
+          <div style="display: flex; justify-content: space-around; align-content: space-around;">
+            <div>
+              {L_ov_password}<br />
+              <input type="password" name="abandon_confirm" maxlength="32" value="" />
+            </div>
+
+            <div style="display: inline-flex; align-content: space-around;">
+              <input type="submit" name="abandon" value="{L_colony_abandon}" />
+
+            </div>
+          </div>
+        </form>
+      </th>
      </tr>
   </table>
-</form>
 
 <!-- INCLUDE page_hint -->
