MISC-fix-40d0: Fixed typo

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -412,8 +412,8 @@ planet = {
 
               <!-- IF ! ALLY_ID && ! production.DARK_MATTER_ONLY -->
                 <!-- IF production.METAL_REST_NUM < 0 --><!-- DEFINE $METAL_REST_NUM = 'metal="{production.METAL_REST_NUM}"' --><!-- ELSE --><!-- DEFINE $METAL_REST_NUM = '' --><!-- ENDIF -->
-                <!-- IF production.CRYSTAL_REST_NUM < 0 --><!-- DEFINE $CRYSTAL_REST_NUM = 'crystal="{production.CRYSTAL_REST_NUM}' --><!-- ELSE --><!-- DEFINE $CRYSTAL_REST_NUM = '' --><!-- ENDIF -->
-                <!-- IF production.DEUTERIUM_REST_NUM < 0 --><!-- DEFINE $DEUTERIUM_REST_NUM = 'deuterium="{production.DEUTERIUM_REST_NUM}' --><!-- ELSE --><!-- DEFINE $DEUTERIUM_REST_NUM = '' --><!-- ENDIF -->
+                <!-- IF production.CRYSTAL_REST_NUM < 0 --><!-- DEFINE $CRYSTAL_REST_NUM = 'crystal="{production.CRYSTAL_REST_NUM}"' --><!-- ELSE --><!-- DEFINE $CRYSTAL_REST_NUM = '' --><!-- ENDIF -->
+                <!-- IF production.DEUTERIUM_REST_NUM < 0 --><!-- DEFINE $DEUTERIUM_REST_NUM = 'deuterium="{production.DEUTERIUM_REST_NUM}"' --><!-- ELSE --><!-- DEFINE $DEUTERIUM_REST_NUM = '' --><!-- ENDIF -->
                 <span class="posRB a75 icon_gather" title="{L_flt_gather_all}" {$METAL_REST_NUM} {$CRYSTAL_REST_NUM} {DEUTERIUM_REST_NUM}></span>
                 <!-- ENDIF -->
 
