INT-fix-41a0.0: Fixed Interface subtab not hidden on openning Options page

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -507,7 +507,7 @@
 <script type="text/javascript"><!--
 //  $("#tab_container").tabs().show();
   $(".tabs").tabs();
-  $(".tabs").show();
+  $("#tab_container").show();
 // --></script>
 
 <script type="text/javascript"><!--
