DB-feat-41a0.4: Added support for Festivals Highspot JigSaw

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -19,6 +19,20 @@
     </td>
   </tr>
   <!-- ENDIF -->
+  <!-- IF CHRISTMAS -->
+  <tr>
+    <td class="c_r markup">
+      <div class="navbar-container contFJ" id="navbar-christmas">
+        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=christmas');">
+          Посмотреть городскую ёлку
+        </button>
+        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=imperator#christmas');">
+          Порыться в своих игрушках
+        </button>
+      </div>
+    </td>
+  </tr>
+  <!-- ENDIF -->
   <!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
   <tr>
     <td class="c_r markup">
