NAVBAR-misc-41a0.5: Support for Christmas event

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -24,10 +24,10 @@
     <td class="c_r markup">
       <div class="navbar-container contFJ" id="navbar-christmas">
         <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=christmas');">
-          Посмотреть городскую ёлку
+          {L_event_christmas_tree_imperator_look_universe}
         </button>
         <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=imperator#christmas');">
-          Порыться в своих игрушках
+          {L_event_christmas_tree_topnav_look_own}
         </button>
       </div>
     </td>
