--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -1,19 +1,15 @@
 <!-- NAVBAR START -->
 
-<!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
-<!--<div class="c_c"><input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"/></div>-->
-<!-- ENDIF -->
-
 <table cellpadding="3" cellspacing="0" class="header c_c" id="navbar"><tbody>
-  <!-- IF HALLOWEEN -->
+  <!-- IF HIGHSPOT_GATHER -->
   <tr>
     <td class="c_r markup">
-      <div class="navbar-container" id="navbar-halloween">
-        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween');">
-          Cколько вкусняшек уже собрали?
+      <div class="navbar-container contFJ" id="navbar-halloween">
+        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=highspot_gather');">
+          {L_highspot_gather_navbar_treats_counter}
         </button>
-        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween_kids');">
-          Кто собрал все вкусняшки?
+        <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=highspot_gather_player');">
+          {L_highspot_gather_navbar_treats_players}
         </button>
       </div>
     </td>
@@ -47,7 +43,7 @@
   <!-- ENDIF -->
   <tr>
     <td class="c_l noborder">
-      <div class="navbar-container">
+      <div class="contFJ">
         <div>
           <select size="1" onchange="changePlanet(this);" id="navbar_planet_select">
             <!-- BEGIN topnav_planets -->
