--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -112,6 +112,10 @@
     <span class="halloween"></span>
     <!-- ENDIF -->
 
+    <script type="text/javascript">
+      var HIGHSPOT_GATHER = "{HIGHSPOT_GATHER}";
+    </script>
+
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery-ui.js?{C_var_db_update}"></script>
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/ion.sound.min.js?{C_var_db_update}"></script>
 
