SYS-misc-41a0.17: More support to Gather highspot

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -296,7 +296,12 @@ textarea {
   justify-content: space-between;
 }
 .contFS {
+  text-align: left;
   justify-content: flex-start;
+}
+
+.flexW {
+  flex-wrap: wrap;
 }
 
 /*.FW {*/
