--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -2920,6 +2920,54 @@ input[type=checkbox] {
 
 
 
+.highspot_gather_unit_log {
+  max-width: 78em;
+}
+.highspot_gather_unit_container {
+  position: relative;
+
+  width: 12em;
+  height: 12em;
+
+  text-align: center;
+}
+
+
+.highspot_gather_treats {
+  max-width: 45em;
+}
+/*.highspot_gather_unit_list_container */
+.highspot_gather_treats > div {
+  margin-bottom: 1em;
+}
+.highspot_gather_treats_text
+{
+  align-items: flex-start;
+  align-content: flex-start;
+}
+.highspot_gather_treats_name
+{
+  margin-bottom: 0.2em;
+  padding: 0.4em;
+  font-size: 125%;
+}
+.highspot_gather_treats_description
+{
+  padding: 0.4em;
+}
+.highspot_gather_treats_images
+{
+  text-align: left;
+  /*align-items: flex-start;*/
+  /*align-content: flex-start;*/
+}
+.highspot_gather_treats_image_container
+{
+  width: 8em;
+  height: 8em;
+
+  margin: 0.5em;
+}
 
 
 
@@ -2955,7 +3003,10 @@ select,
 textarea,
 textarea.ui-button,
 th,
-td
+td,
+.td,
+.cell,
+.th
 {
   border-color: #415680;
   background-color: #344566;
@@ -2964,6 +3015,11 @@ td
 .subheader, tr.subheader > td, tr.subheader > th {
   background-color: #233452;
 }
+.th, .header {
+  background-color:  #132544; /*rgba(0,0,0,0.35);*/
+}
+
+
 input[type=checkbox] {
   background-image: none;
   background-color: #222D42; /*rgba(0,0,0,0.35);*/
